- setup swagger - finish product routes
