# internal/modules/store_catalog/repository/product.model.go
@@ -7,7 +7,7 @@ import (
 	"gorm.io/gorm"
 )
 
-type Product struct {
+type ProductCatalog struct {
 	ID          string `gorm:"primarykey"`
 	Name        string
 	Description string
@@ -16,4 +16,8 @@ type Product struct {
 	CreatedAt time.Time      `json:"-"`
 	UpdatedAt time.Time      `json:"-"`
 	DeletedAt gorm.DeletedAt `json:"-"`
+}
+
+func (ProductCatalog) TableName() string {
+	return "products"
 }
